css/style.css
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@300&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat&display=swap');

html {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    /* list-style: none; */
    scroll-behavior: smooth;
}

h3 {
    margin-top:0;
}

label {
    opacity: 0.8;
}

#top-nav {
    height: 70px;
    align-items: center;
}

#top-nav-icon:hover {
    color: #efa69d;
    transform: scale(1.2);
}

#top-nav-icon {
    /* height: 10px;
    width: 10px; */
    opacity: 1;
    margin: 0 auto;
    padding: 15px;
    top: 50%;
    bottom: 50%;
    color: white; 
}

/* .fa-solid.fa-envelope, .fa-brands.fa-linkedin-in, .fa-brands.fa-github {
    height: 10px;
    width: 10px;
} */

.intro-info {
    position: relative;
    z-index: 10;
    top: -450px;
    max-width: 600px;
    margin: 0 auto;
    /* top: 50%;
    left: 25%; */
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    transform: translateY(-50%);
    opacity: 1 !important;
    text-align: center;
}

.name {
    font-size: 3.6rem;
    padding-top: 100px;
}

#get-to-know-me {
    background-color: #efa69d;
    opacity: 1;
    width: 30%;
    height: 20%;
    font-size: 1.5rem;
    font-family: 'Merriweather', sans-serif;
}

#get-to-know-me:hover {
    transform: scale(1.2);
}

.profile-pic {
    max-width: 30%;
    max-height: 30s;
    border-radius: 50%;
}

#home {
    background-size: cover;
    background-repeat: no-repeat;
    opacity: 0.7;
}

#projects h2 {
    padding-bottom: 10px;
    z-index: 100;
}

#about {
    background-image: url("../img/about-me-background.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    opacity: 0.9;
}

#myVideo {
    opacity: 0.7; 
    width: 100vw;
    height: 90vh;
    object-fit: cover;
    /* position: fixed; */
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
} 

#myVideo2 {
    opacity: 0.7; 
    min-width: 100vw;
    min-height: 95vh;
} 

:root{
    --color-primary: #045b74; 

    --color-secondary: #B2FEFA;  
    --color-white: #FFFFFF;
    --color-black: #000;
    --color-grey-0: #f8f8f8;
    --color-grey-1: #dbe1e8;
    --color-grey-2: #b2becd;
    --color-grey-3: #6c7983;
    --color-grey-4: #454e56;
    --color-grey-5: #2a2e35;
    --color-grey-6: #12181b;
    --br-sm-2: 14px;
    --box-shadow-1: 0 3px 15px rgba(0,0,0,.3);
}

body {
    margin: 0;
    font-family: 'Montserrat', sans-serif;
    font-size: 1.1rem;
    color: var(--color-white);
    transition: all .4s ease-in-out;
    min-height: 100vh;
    width: 100%;
    background: #485563;  
    background: -webkit-linear-gradient(to right, #29323c, #485563);  
    background: linear-gradient(to right, #29323c, #485563); 
}

header {
    height: 100vh;
    color: var(--color-white);
    overflow: hidden;
}

a {
    display: inline-block;
    text-decoration: none;
    color: inherit;
    font-family: inherit;
}

h2 {
    margin-left: 30px;
    margin-top: 0px;
    margin-bottom: 0;
    padding-top: 20px;
    font-size: 4vh;
    font-size: 3.5vw;
}

.section-wrapper {
    max-width: 900px;
}

.sec1 {
    /* background: #0F2027;  
    background: -webkit-linear-gradient(to right, #2C5364, #203A43, #0F2027);  
    background: linear-gradient(to right, #2C5364, #203A43, #0F2027);  */
    /* background: var(--color-white); */
    background: #8dd7f4;
    min-height: 100vh;
    width: 100%;
    margin: 0 auto;
}

.sec2 {
    padding-bottom: 10px;
    background-color: #f7f7f7;
    color: black;
    min-height: 100vh;
    width: 100%;
    margin: 0 auto;
}

.sec3 {
    position: relative;
    color: black;
    /* background: #131314; */
    background: #11222a; 
    background-image: url("../img/imattsmart-kigHD-rVJzA-unsplash.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    opacity: 1;
    min-height: 100vh;
    width: 100%;
    margin: 0 auto;
    border: 1px solid transparent;
}

.sec4 {
    /* background-color:#dbe1e8; */
    background-image: url("../img/harli-marten-n7a2OJDSZns-unsplash.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    color: white;
    min-height: 100vh;
    width: 100vw;
    margin: 0 auto;
    align-items: center;
    justify-content: center;
    bottom: 0
}

.sec5 {
    background: #0F2027;  
    background: -webkit-linear-gradient(to right, #2C5364, #203A43, #0F2027);  
    background: linear-gradient(to right, #2C5364, #203A43, #0F2027);
    min-height: 60vh;
    width: 100%;
    margin: 0 auto;
}

.active {
    display: block;
} 

.controls {
    position: fixed;
    z-index: 10;
    top: 50%;
    right: 3%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    transform: translateY(-50%);
    background: transparent;
    pointer-events: none;
}

.controls-background {
    /* background: linear-gradient(to left, #514A9D, #24C6DC); */
    pointer-events: all;  
}

#menu, .controls label {
    pointer-events: all;  
}

.control {
    width: 200px;
    padding: 15px;
}

ul {
    padding-left: 0;
}

li {
    list-style: none;
}

button {
    border: none;
    width: 100px;
    color: white;
    padding: 0.5rem;
    margin: .5rem 0;
    cursor: pointer;
    background-color: var(--color-grey-3);
    border-radius: 20px;
    display: flex;
    justify-content: center;
    align-items: center;
    font-family: 'Montserrat', sans-serif;
    font-size: 1.25rem;
    box-shadow: var(--box-shadow-1);
    opacity: 0.8;
}

button:hover {
    background-color:#efa69d;
}

.active-btn {
    background-color: var(--color-secondary) !important;
    transition: all .4s ease-in-out;
    color: var(--color-grey-4)
}

.computer-img {
    max-width: 90vh;
    max-height: 90vw;
    z-index: 20;
}
/* ... */

